# AssemblyWasm

./: .gitignore  package-lock.json  package.json
my-react-app/src/: rust_lib.d.ts  rust_lib.js  rust_lib_bg.wasm
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
src/: App.js  rust_lib.js  rust_lib_bg.wasm  rust_lib_bg.wasm.d.ts
