[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
assembly = { package = "miden-assembly", version = "0.9", default-features = false }
miden-air = { package = "miden-air", version = "0.9", default-features = false }
miden-vm = { package = "miden-vm", version = "0.9", default-features = false }
miden-stdlib = { package = "miden-stdlib", version = "0.9", default-features = false }
wasm-bindgen = "0.2"