[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
assembly = { package = "miden-assembly", version = "0.9", default-features = false }
miden-air = { package = "miden-air", version = "0.9", default-features = false }
miden-vm = { package = "miden-vm", version = "0.9", default-features = false }
miden-objects = { package = "miden-objects", default-features = false }
miden-stdlib = { package = "miden-stdlib", version = "0.9", default-features = false }
miden-lib = { package = "miden-lib", version = "0.2", default-features = false }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1.6"

[profile.release]
debug = true
panic = "unwind" 

[profile.dev]
debug = true 
panic = "unwind" 

[target.wasm32-unknown-unknown]
rustflags = [
  "-C", "debuginfo=2",
]